Write cluster mappings and single file for report